WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
36583
Missing plug-ins should be represented by text only, instead of lego block
https://bugs.webkit.org/show_bug.cgi?id=36583
Summary
Missing plug-ins should be represented by text only, instead of lego block
Jon Honeycutt
Reported
2010-03-25 00:14:48 PDT
Missing plug-ins should be represented by text only, instead of lego block. <
rdar://problem/7780798
>
Attachments
patch
(4.02 KB, patch)
2010-03-25 00:18 PDT
,
Jon Honeycutt
mitz: review+
jhoneycutt
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jon Honeycutt
Comment 1
2010-03-25 00:18:02 PDT
Created
attachment 51601
[details]
patch
Jon Honeycutt
Comment 2
2010-03-25 00:38:11 PDT
Landed in
r56507
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug