<rdar://problem/7780798> Missing plug-ins should be represented by text only, instead of lego block

https://bugs.webkit.org/show_bug.cgi?id=36583

Reviewed by Dan Bernstein.

WebCore:

* rendering/RenderEmbeddedObject.cpp:
(WebCore::RenderEmbeddedObject::paintReplaced):
Set the font rendering mode and the computed size, so that the text will
draw properly on Windows.

WebKit/win:

* WebCoreSupport/WebFrameLoaderClient.cpp:
(WebFrameLoaderClient::createPlugin):
Return 0 if we failed to initialize the plug-in, which causes the new
"missing plug-in" text to draw.

Canonical link: https://commits.webkit.org/47801@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56507 268f45cc-cd09-0410-ab3c-d52691b4dbfc